force-app/main/default/objects/OrderItem/fields/DescuentoManual__c.field-meta.xml
<CustomField>
    <fullName>DescuentoManual__c</fullName>
    <description>Campo usado para almacenar el descuento total.</description>
    <label>Descuento Manual</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>