force-app/main/default/objects/OrderItem/fields/DescuentoSAP__c.field-meta.xml
<CustomField>
    <fullName>DescuentoSAP__c</fullName>
    <description>Campo usado para capturar el descuento de SAP</description>
    <label>Descuento SAP</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>