force-app/main/default/objects/OrderItem/fields/IMP_Descuento__c.field-meta.xml
<CustomField>
    <fullName>IMP_Descuento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Descuento que aplica de acuerdo a promociones</description>
    <label>Descuento promoción relacion</label>
    <referenceTo>Descuento__c</referenceTo>
    <relationshipLabel>Productos de pedidos</relationshipLabel>
    <relationshipName>Productos_de_pedidos</relationshipName>
    <type>Lookup</type>
</CustomField>