force-app/main/default/objects/OrderItem/fields/IMP_Estatus__c.field-meta.xml
<CustomField>
    <fullName>IMP_Estatus__c</fullName>
    <description>Campo usado para almacenar el estatus de la Partida</description>
    <label>Estatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No relevante</fullName>
            </value>
            <value>
                <fullName>A</fullName>
                <label>No tratado</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>Tratado parcialmente</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Tratado completamente</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>