force-app/main/default/objects/OrderItem/fields/IMP_LlaveExclusiva__c.field-meta.xml
<CustomField>
    <fullName>IMP_LlaveExclusiva__c</fullName>
    <description>Número de pedido + posición + código del producto</description>
    <externalId>true</externalId>
    <label>Llave exclusiva</label>
    <length>255</length>
    <type>Text</type>
</CustomField>