force-app/main/default/objects/OrderItem/fields/IMP_Posicion__c.field-meta.xml
<CustomField>
    <fullName>IMP_Posicion__c</fullName>
    <description>Almacena el valor de la posición que se envia a SAP</description>
    <label>Posición</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>