force-app/main/default/objects/OrderItem/fields/PrecioTotal__c.field-meta.xml
<CustomField>
    <fullName>PrecioTotal__c</fullName>
    <description>Precio total del producto de pedido y el descuento aplicado</description>
    <formula>((1- DescuentoSAP__c )*(UnitPrice * Quantity )  * (1-IMP_DescuentoPromo__c))   *(1- DescuentoManual__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>