force-app/main/default/objects/OrderItem/fields/TS4_SemaforoDisp__c.field-meta.xml
<CustomField>
    <fullName>TS4_SemaforoDisp__c</fullName>
    <defaultValue>&quot;Error&quot;</defaultValue>
    <description>Campo usado para determinar la disponibilidad de un producto.</description>
    <label>Semaforo Disponibilidad</label>
    <length>20</length>
    <type>Text</type>
</CustomField>